# rust-servers-services-apps-hands-on

./: .gitignore  README.md
ezytutors/: Cargo.toml
ezytutors/tutor-db/: Cargo.toml  docker-compose.yml
ezytutors/tutor-db/src/: database.sql
ezytutors/tutor-db/src/iter2/: handlers.rs  models.rs
ezytutors/tutor-db/src/iter3/: handlers.rs
ezytutors/tutor-nodb/: Cargo.toml
ezytutors/tutor-nodb/src/: handlers.rs  models.rs  routes.rs
scenario1/: Cargo.toml
scenario1/http/src/: httprequest.rs  httpresponse.rs
scenario1/httpserver/: Cargo.toml
scenario1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
scenario1/tcpclient/src/: main.rs
scenario1/tcpserver/src/: main.rs
