[package]
name = "tutor-db"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-rt = "2.11.0"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "runtime-tokio", "macros", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
openssl = { version = "0.10.75", features = ["vendored"] }
