[package]
name = "tutor-nodb"
version = "0.1.0"
edition = "2024"
default-run = "tutor-service"

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
actix-web = "4.11.0"
actix-rt = "2.11.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
